# ai-cv-4th-assignment

./: .editorconfig  .gitignore  README.md
cmake/: CMakeLists.txt
cmake/src/: test_main.cpp
proj1/: README.md
proj1/stage1/: Classes_Network.py  Classes_make_anno.py  classifier.py  dataset.py  loganalyser.py
proj1/stage2/: Species_Network.py  Species_make_anno.py  classifier.py  dataset.py
proj1/stage3/: Multi_Network.py  Species_make_anno.py  classifier.py  dataset.py  loganalyser.py  loss_tracer.py
proj1/utils/: __init__.py  executor.py  loganalyser.py  logutil.py  util.py
proj2/: README.md  augmentation.py  data.py  detector.py  draft.md  generate_train_test_list.py  loganalyser.py  logloader.py  logutil.py  loss_tracer.py  network.py  pg.py  util.py
proj2/common/: __init__.py  dataset.py  executor.py  generate_train_test_list.py  loganalyser.py  logutil.py  shortuuid.py  tracer.py  util.py
proj2/src/: detector.py  generate_train_test_list.py  util.py
proj2/stage1/: dataset.py  detector.py  network.py
proj2/stage2/: dataset.py  detector.py  generate_train_test_list.py  init.py  loganalyser.py  network.py
proj2/stage3/: dataset.py  detector.py  generate_train_test_list.py  init.py  iou.py  iou_pixel.py  iou_pixel_test.py  iou_test.py  loganalyser.py  network.py
week1/: 01_recode.py  README.md  q1_recode.py  q2_augmentation.py
week10/: NMS.cpp  NMS.hpp  README.md  main.cpp  nms.py  nms_test.py
week2/: ImageStitching.md  README.md  assignment2.py  c1_median_blur.cpp  c1_median_blur.hpp  c1_median_blur.py  c1_median_blur_test.py  c2_ransac_matching.py  c2_ransac_matching_test.py  main.cpp  p1_image_stitching.py  util.py
week3/: README.md  q1_linear_regression.py  q2_logistic_regression.py
week4/: README.md
week5/: KMeansResult.md  README.md  c1_kmeanspp.py  m1_playground.py
week5/data/: data.csv
